большой объём правок багов пока на очереди остались баги структурирования обмена с lm studio